GC Logs simplification